--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
         <div class="blk" data-lavrock-order="2" data-yunque-section="广告" data-node-id="n5203b76399654b8d8daba78c0ad52edb">
             <div class="g-adv swiper-container" data-node-id="na3b1d5debe67435d8535f5c0d93ecae3">
                 <ul class="swiper-wrapper" data-node-id="ncc0a313cfba84f2a99b8389b6c438bef">
-                    <li class="swiper-slide" data-node-id="n0d706d2953cf44dabd2e39a0ef9ee7c3"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841274620833.jpg" alt="" data-node-id="nc6ac498f962b43b490ef528152de3988"></li>
+                    <!--<li class="swiper-slide" data-node-id="n0d706d2953cf44dabd2e39a0ef9ee7c3"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841274620833.jpg" alt="" data-node-id="nc6ac498f962b43b490ef528152de3988"></li>
                     <li class="swiper-slide" data-node-id="n8e2595a7d1e342308add5b4acec49465"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841290916407.jpg" alt="" data-node-id="n49f0b3cb66514914a0fb929910370a24"></li>
                     <li class="swiper-slide" data-node-id="n89df2332962944c487c86c3ceffa4735"><img src="https://img1.cloudokids.cn/newimg/20181110/1541850282709361.jpg" alt="" data-node-id="n014fab75a37949a5b09598bbf74e848d"></li>
+                   --> <li class="swiper-slide" data-node-id="n89df2332962944c487c86c3ceffa4735"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841004492833.jpg?version=9d81126b153843a5b2daaebe7cb6cbc7" alt="" data-node-id="n014fab75a37949a5b09598bbf74e848d"></li>
                 </ul>
                 <div class="adv-pagination" data-node-id="n508cf26986b0449591508a741223130e"></div>
             </div>
@@ -74,14 +75,14 @@
                     <em data-node-id="n62d8a8f23228440194824461ac680ab6">Case&nbsp;center</em>
                 </div>
                 <ul class="pro-box clearfix" data-node-id="na17443440f3d44678eb432936355ecf0">
-                    <li data-node-id="nf0be15a122244a83a0eb5444c436043e"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841071413578.jpg" alt="" data-node-id="n2d1ec086e5e1405fb1717478fa309dfe"><em data-node-id="n0b6dd4ca421840dc807fad2490254164">济南西站</em></li>
-                    <li data-node-id="n12d9a155773549f9a5d77764641ca689"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841093045714.jpg" alt="" data-node-id="nf72b5ad165b44ae5b5c7267ef3ce237b"><em data-node-id="nc4435c24737d4cff8dddfde1a3db5837">西安北站</em></li>
-                    <li data-node-id="n7e2fc43c843b4bd1a118419e208c9a63"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841129341908.jpg" alt="" data-node-id="n52fc7926bae04e40bf0eeda080596ce4"><em data-node-id="na8e8564ebf2441778a4cdd0cebaee644">郑州东站</em></li>
-                    <li data-node-id="n5043b8094d8448029fd368904b4b46f7"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841109003527.jpg" alt="" data-node-id="n69c34692e5fe4e58a02df53d9d36f9e3"><em data-node-id="n01feb131a3004b728c01d96ce845f9e2">杭州南站</em></li>
+                    <li data-node-id="nf0be15a122244a83a0eb5444c436043e"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841071413578.jpg" alt="" data-node-id="n2d1ec086e5e1405fb1717478fa309dfe"><!--<em data-node-id="n0b6dd4ca421840dc807fad2490254164">济南西站</em>--></li>
+                    <li data-node-id="n12d9a155773549f9a5d77764641ca689"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841093045714.jpg" alt="" data-node-id="nf72b5ad165b44ae5b5c7267ef3ce237b"><!--<em data-node-id="nc4435c24737d4cff8dddfde1a3db5837">西安北站</em>--></li>
+                    <li data-node-id="n7e2fc43c843b4bd1a118419e208c9a63"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841129341908.jpg" alt="" data-node-id="n52fc7926bae04e40bf0eeda080596ce4"><!--<em data-node-id="na8e8564ebf2441778a4cdd0cebaee644">郑州东站</em>--></li>
+                    <li data-node-id="n5043b8094d8448029fd368904b4b46f7"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841109003527.jpg" alt="" data-node-id="n69c34692e5fe4e58a02df53d9d36f9e3"><!--<em data-node-id="n01feb131a3004b728c01d96ce845f9e2">杭州南站</em>--></li>
                 </ul>
             </div>
         </div>
-        <div class=" blk" data-lavrock-order="7" data-yunque-section="案例" data-node-id="n1950c228d8ea4d85ad7c6a97c4c47d94">
+        <!--<div class=" blk" data-lavrock-order="7" data-yunque-section="案例" data-node-id="n1950c228d8ea4d85ad7c6a97c4c47d94">
             <div class="anl" data-node-id="n447bfbd7510a44ed8eff9f2889fe5f61">
                 <div class="title" data-node-id="n65797ac7ba574846a8c69475601127ea"><span data-node-id="nd9420123bc314c419e30f1d3ad3d3199">历经多年&nbsp;多次保质保量完成项目</span><em data-node-id="n4574863b1cfc4421afaea0853ee0d159">建筑装饰公司必定有着深厚经验和作品积累！</em></div>
                 <div class="anl-box" data-node-id="n6ace8ce0e0b54941b8fdec3aa4d290c4">
@@ -98,58 +99,60 @@
                             <dl class="swiper-slide" data-node-id="nb4525e32d85f4722ace323253c477d0e">
                                 <dt data-node-id="ne1bb16d3266b4d77b70027137b52141e"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841149300559.jpg" alt="" data-node-id="n7540b26f82b2468bb5089159fd7e4107"></dt>
                                 <dd data-node-id="nf9d1b8886a1c458b91fc9f588f1d2be0">
-                                    <!--<h2 data-node-id="n3ccd5ebb6ecf4979b18572b2c270c9c4">&nbsp;&nbsp;</h2>-->
-                                    <!--<p data-node-id="n9993dedf06194b548e7fdbcb5996efef">&nbsp;&nbsp;</p>-->
+                                    &lt;!&ndash;<h2 data-node-id="n3ccd5ebb6ecf4979b18572b2c270c9c4">&nbsp;&nbsp;</h2>&ndash;&gt;
+                                    &lt;!&ndash;<p data-node-id="n9993dedf06194b548e7fdbcb5996efef">&nbsp;&nbsp;</p>&ndash;&gt;
                                 </dd>
                             </dl>
                             <dl class="swiper-slide" data-node-id="n7939d10071a049dcbe030833404d6343">
                                 <dt data-node-id="nce16c63961924470a520b7f707832037"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841170334386.jpg" alt="" data-node-id="ne30678c8393441fdaa353b09e593122d"></dt>
                                 <dd data-node-id="n205cdb19eace40a091762ddd0dc2164f">
-                                    <!--<h2 data-node-id="na8481bca363740f094a075951bacbd32">&nbsp;&nbsp;</h2>-->
-                                    <!--<p data-node-id="n7f76cbfbd312468f9bcddc1a68cdafa4">&nbsp;&nbsp;</p>-->
+                                    &lt;!&ndash;<h2 data-node-id="na8481bca363740f094a075951bacbd32">&nbsp;&nbsp;</h2>&ndash;&gt;
+                                    &lt;!&ndash;<p data-node-id="n7f76cbfbd312468f9bcddc1a68cdafa4">&nbsp;&nbsp;</p>&ndash;&gt;
                                 </dd>
                             </dl>
                             <dl class="swiper-slide" data-node-id="ne6c94fd3b527484094dbf929ea51dfa5">
                                 <dt data-node-id="nd48c0929fd2842abbb9622277954bd78"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841187237508.jpg" alt="" data-node-id="n81411a8be3684e2eb03b3a4a62b4fcc9"></dt>
                                 <dd data-node-id="n270afd78b6c74cd7a3278bd0342722b8">
-                                    <!--<h2 data-node-id="naeade89541b64ef1a154afae3a7a763f">&nbsp;&nbsp;</h2>-->
-                                    <!--<p data-node-id="nb6fd046f15564b408f5041ec6874b3b2">&nbsp;&nbsp;</p>-->
+                                    &lt;!&ndash;<h2 data-node-id="naeade89541b64ef1a154afae3a7a763f">&nbsp;&nbsp;</h2>&ndash;&gt;
+                                    &lt;!&ndash;<p data-node-id="nb6fd046f15564b408f5041ec6874b3b2">&nbsp;&nbsp;</p>&ndash;&gt;
                                 </dd>
                             </dl>
                             <dl class="swiper-slide" data-node-id="n53bccad0ac7c4c608d8efbcc97424128">
                                 <dt data-node-id="n84b8b141174e4581b1326e061adc890b"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841201900661.jpg" alt="" data-node-id="nb34be8d6629543c2bbde6c5a4d279bdb"></dt>
                                 <dd data-node-id="n9136d528c56442f092abf4c24a429835">
-                                    <!--<h2 data-node-id="nb389e9f24ac24eb28b73aeb2cdad26a6">&nbsp;&nbsp;</h2>-->
-                                    <!--<p data-node-id="ne39864589fe745fea503530576d377ea">&nbsp;&nbsp;</p>-->
+                                    &lt;!&ndash;<h2 data-node-id="nb389e9f24ac24eb28b73aeb2cdad26a6">&nbsp;&nbsp;</h2>&ndash;&gt;
+                                    &lt;!&ndash;<p data-node-id="ne39864589fe745fea503530576d377ea">&nbsp;&nbsp;</p>&ndash;&gt;
                                 </dd>
                             </dl>
                             <dl class="swiper-slide" data-node-id="nf039250cbb514b71a9feb02e3e826a19">
                                 <dt data-node-id="n5b8cb80beb7e404fba964c0e89bc9c7f"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841224752277.jpg" alt="" data-node-id="n3f8a04357580440b8795f6746a113331"></dt>
                                 <dd data-node-id="nfdc718832c0b428291e5d97a31bb5926">
-                                    <!--<h2 data-node-id="nde198677bbf146699033751ad1cd8b70">&nbsp;&nbsp;</h2>-->
-                                    <!--<p data-node-id="nc89d34bd702046fab751e4c18c66b550">&nbsp;&nbsp;</p>-->
+                                    &lt;!&ndash;<h2 data-node-id="nde198677bbf146699033751ad1cd8b70">&nbsp;&nbsp;</h2>&ndash;&gt;
+                                    &lt;!&ndash;<p data-node-id="nc89d34bd702046fab751e4c18c66b550">&nbsp;&nbsp;</p>&ndash;&gt;
                                 </dd>
                             </dl>
                             <dl class="swiper-slide" data-node-id="na546ea7958334cd5b0fcacc87639a1bb">
                                 <dt data-node-id="n6684a55e5e144e2aaaf2d686e564d03e"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841241322176.jpg" alt="" data-node-id="nd6cc1a0666ac42538945508d829fba56"></dt>
                                 <dd data-node-id="n26e6d9787f724ba5b8ae14b1817e7835">
-                                    <!--<h2 data-node-id="nb79f5ee55b7d49769d7f239ce398ae91">&nbsp;&nbsp;</h2>-->
-                                    <!--<p data-node-id="ne99f2d7ffa324e43b26645ebfb456f95">&nbsp;&nbsp;</p>-->
+                                    &lt;!&ndash;<h2 data-node-id="nb79f5ee55b7d49769d7f239ce398ae91">&nbsp;&nbsp;</h2>&ndash;&gt;
+                                    &lt;!&ndash;<p data-node-id="ne99f2d7ffa324e43b26645ebfb456f95">&nbsp;&nbsp;</p>&ndash;&gt;
                                 </dd>
                             </dl>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class=" blk" data-lavrock-order="8" data-yunque-section="关于我们" data-node-id="n17ea34b4efd846eab1e2900dc671972f">
             <div class="abo" data-node-id="n5b353c14dc684647945c3d96d2e82d18">
                 <div class="title" data-node-id="ne0d75d9256ac4a96aa6fcaa4421f5c0c"><span data-node-id="n00f96c1bb7054a42b48b0987e8737471">走进广拓</span><em data-node-id="ne4e5237655d14173ba6cd8b0b8114a81">About GT</em></div>
                 <dl data-node-id="n4052c64b5b8544a38ca0512fc25ca06d">
-                    <dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841004492833.jpg?version=9d81126b153843a5b2daaebe7cb6cbc7" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>
+                    <dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="images/YYZZ.jpeg" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>
+                    <!--<dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841004492833.jpg?version=9d81126b153843a5b2daaebe7cb6cbc7" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>-->
                     <dd data-node-id="n650e609cfd4d4746a69a035a1ae3c937">
                         <h2 data-node-id="nde5ff909e42e481aa73d7f3f4a46b8cf"><span data-node-id="na9620b639d9f48dfaca48fe4a5f4f228">河南广拓装饰工程有限公司</span></h2>
-                        <p data-node-id="n00e18be8e8234706acaa864dfe9a3ffa">河南广拓装饰工程有限公司成立于2014年4月，是河南知名的装饰工程施工的企业，近年来，主要从事高铁站雨棚装饰吊顶，在此领域，已先后完成西安北站、郑州东站、杭州南站等20余项大型优质项目&nbsp;，&nbsp;公司在城市园林绿化，钢结构施工方向也有丰富的施工项目经验，实力浑厚，敬请合作。</p>
+                        <p
+                                data-node-id="n00e18be8e8234706acaa864dfe9a3ffa">河南广拓装饰工程有限公司成立于2014年4月，是河南知名的装饰工程施工的企业，近年来，主要从事高铁站雨棚装饰吊顶，已先后完成西安北站、郑州东站、杭州南站等20余项大型优质项目的雨棚吊顶施工作业&nbsp;，&nbsp;公司在城市园林绿化，钢结构施工方向也有丰富的施工项目经验，实力浑厚，敬请合作。</p>
                     </dd>
                 </dl>
             </div>
