--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="abo" data-node-id="n5b353c14dc684647945c3d96d2e82d18">
                 <div class="title" data-node-id="ne0d75d9256ac4a96aa6fcaa4421f5c0c"><span data-node-id="n00f96c1bb7054a42b48b0987e8737471">走进广拓</span><em data-node-id="ne4e5237655d14173ba6cd8b0b8114a81">About GT</em></div>
                 <dl data-node-id="n4052c64b5b8544a38ca0512fc25ca06d">
-                    <dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="images/YYZZ.jpeg" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>
+                    <dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="images/YYZZ.jpg" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>
                     <!--<dt data-node-id="ne4f9d184584c4e91a544e81062cb1fca"><img src="https://img1.cloudokids.cn/newimg/20181110/1541841004492833.jpg?version=9d81126b153843a5b2daaebe7cb6cbc7" alt="" data-node-id="n7e749d3a127e4711992f9ef2d4263a43"></dt>-->
                     <dd data-node-id="n650e609cfd4d4746a69a035a1ae3c937">
                         <h2 data-node-id="nde5ff909e42e481aa73d7f3f4a46b8cf"><span data-node-id="na9620b639d9f48dfaca48fe4a5f4f228">河南广拓装饰工程有限公司</span></h2>
