--- a/guangtuo/index.html
+++ b/guangtuo/index.html
@@ -163,7 +163,7 @@
                 <p data-node-id="na48c8fc536bb429683f8c2e4d379aefb"><span data-node-id="n748c56af95e0479e8070760896c9731b">公司地址：</span><span commom-id="address" data-node-id="nb87897ca59904b08aef2e7d7aa5859fe">郑州市管城区郑尉路16号1号楼2单元6层25号</span></p>
                 <p data-node-id="n3163c039fd844425b34df1dcda5e8067"><span data-node-id="n6d574ff6068644ebb1e5fc090ef70d97">电话：</span><a href="13103783222" commom-id="tel" data-node-id="n9b48cdeaf6f54c56af1cdafbcd095123" title="13103783222" target="_self">13103783222</a></p>
                 <p data-node-id="n0311b147b0d744ad8e8f1ce296201b8a"><span data-node-id="n971a56d6f1aa4e87a9fc2356d1470bf7">邮箱：</span><span commom-id="mail" data-node-id="n69b396cb0bd44cfa8e2231974e4330ab">HNGTZS@163.com</span></p>
-                <p data-node-id="nebce61c206b043b5ae3caaa03bdb1520"><span data-node-id="nb58df4c02df3414cbc2c59f3fb3b6140">备案号：</span><a href="http://www.miitbeian.gov.cn/" target="_blank" commom-id="icp" data-node-id="nc6416cf4d12b45818effde113549f57f">豫ICP备15013641号</a></p>
+                <p data-node-id="nebce61c206b043b5ae3caaa03bdb1520"><span data-node-id="nb58df4c02df3414cbc2c59f3fb3b6140">备案号：</span><a href="https://beian.miit.gov.cn" target="_blank" commom-id="icp" data-node-id="nc6416cf4d12b45818effde113549f57f">豫ICP备15013641号</a></p>
                 <!--<p data-node-id="n9f8eee8907414b969fcceb4f7a448879"><a href="http://www.ilark.cn/#/" target="_blank" class="nsw-inline-exclude" data-node-id="n259d46473f9d4730bee6b2ada740e7c9">技术支持：牛商网</a></p>-->
             </div>
             <div class="code clearfix" data-node-id="n3beb0ec5470b49a78b545a2c0bfe0bf8">
