--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                                                                                                                            data-node-id="n69b396cb0bd44cfa8e2231974e4330ab">HNGTZS@163.com</span>
                 </p>
                 <p data-node-id="nebce61c206b043b5ae3caaa03bdb1520"><span data-node-id="nb58df4c02df3414cbc2c59f3fb3b6140">备案号：</span><a
-                        href="http://www.miitbeian.gov.cn/" target="_blank" commom-id="icp" data-node-id="nc6416cf4d12b45818effde113549f57f">豫ICP备15013641号</a>
+                        href="https://beian.miit.gov.cn" target="_blank" commom-id="icp" data-node-id="nc6416cf4d12b45818effde113549f57f">豫ICP备15013641号</a>
                 </p>
                 <!--<p data-node-id="n9f8eee8907414b969fcceb4f7a448879"><a href="http://www.ilark.cn/#/" target="_blank" class="nsw-inline-exclude" data-node-id="n259d46473f9d4730bee6b2ada740e7c9">技术支持：牛商网</a></p>-->
             </div>
